Add GitHub Actions workflow for deploying to Pages

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -3,7 +3,7 @@
   <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="alternate" type="application/rss&#43;xml" href="//localhost:1313/about/index.xml">
+<link rel="alternate" type="application/rss&#43;xml" href="//localhost:1313/contact/index.xml">
 <meta name="robots" content="noindex, nofollow">
 
 
@@ -18,20 +18,23 @@
 <link rel="icon" type="image/png" href="/favicons/android-144x144.png" sizes="144x144">
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png" sizes="192x192">
 
-<title>About Us | </title>
+<title>Contact Us | </title>
 <meta name="description" content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
-<meta property="og:url" content="//localhost:1313/about/">
-  <meta property="og:title" content="About Us">
-  <meta property="og:description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
+<meta property="og:url" content="//localhost:1313/contact/">
+  <meta property="og:title" content="Contact Us">
+  <meta property="og:description" content="Contact Amisana Solutions We’d love to hear from you! Whether you’re looking to implement AI solutions, improve your digital presence, or streamline your operations, our team is here to help.
+Email: cameron@amisana.com Phone: (123) 456-7890 Address: 123 AI Street, Tech City, TX 75001 Email: Message:">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
-  <meta itemprop="name" content="About Us">
-  <meta itemprop="description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
-  <meta itemprop="wordCount" content="50">
+  <meta itemprop="name" content="Contact Us">
+  <meta itemprop="description" content="Contact Amisana Solutions We’d love to hear from you! Whether you’re looking to implement AI solutions, improve your digital presence, or streamline your operations, our team is here to help.
+Email: cameron@amisana.com Phone: (123) 456-7890 Address: 123 AI Street, Tech City, TX 75001 Email: Message:">
+  <meta itemprop="wordCount" content="46">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="About Us">
-  <meta name="twitter:description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
+  <meta name="twitter:title" content="Contact Us">
+  <meta name="twitter:description" content="Contact Amisana Solutions We’d love to hear from you! Whether you’re looking to implement AI solutions, improve your digital presence, or streamline your operations, our team is here to help.
+Email: cameron@amisana.com Phone: (123) 456-7890 Address: 123 AI Street, Tech City, TX 75001 Email: Message:">
 
 
 
@@ -62,8 +65,20 @@
     </header>
     <div class="container-fluid td-default td-outer">
       <main role="main" class="td-main">
-        <h1 id="about-amisana-solutions">About Amisana Solutions</h1>
-<p>Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.</p>
+        <h1 id="contact-amisana-solutions">Contact Amisana Solutions</h1>
+<p>We’d love to hear from you! Whether you’re looking to implement AI solutions, improve your digital presence, or streamline your operations, our team is here to help.</p>
+<ul>
+<li><strong>Email:</strong> <a href="mailto:cameron@amisana.com">cameron@amisana.com</a></li>
+<li><strong>Phone:</strong> (123) 456-7890</li>
+<li><strong>Address:</strong> 123 AI Street, Tech City, TX 75001</li>
+</ul>
+<!-- raw HTML omitted -->
+<p><!-- raw HTML omitted -->Email:<!-- raw HTML omitted -->
+<!-- raw HTML omitted --></p>
+<p><!-- raw HTML omitted -->Message:<!-- raw HTML omitted --></p>
+<!-- raw HTML omitted -->
+<p><!-- raw HTML omitted -->Send<!-- raw HTML omitted --></p>
+<!-- raw HTML omitted -->
 
       </main>
       <footer class="td-footer row d-print-none">
