--- a/public/services/index.html
+++ b/public/services/index.html
@@ -3,7 +3,7 @@
   <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="alternate" type="application/rss&#43;xml" href="//localhost:1313/about/index.xml">
+<link rel="alternate" type="application/rss&#43;xml" href="//localhost:1313/services/index.xml">
 <meta name="robots" content="noindex, nofollow">
 
 
@@ -18,20 +18,20 @@
 <link rel="icon" type="image/png" href="/favicons/android-144x144.png" sizes="144x144">
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png" sizes="192x192">
 
-<title>About Us | </title>
-<meta name="description" content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
-<meta property="og:url" content="//localhost:1313/about/">
-  <meta property="og:title" content="About Us">
-  <meta property="og:description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
+<title>Our Services | </title>
+<meta name="description" content="Discover the range of services offered by Amisana Solutions to empower your business with AI technology.">
+<meta property="og:url" content="//localhost:1313/services/">
+  <meta property="og:title" content="Our Services">
+  <meta property="og:description" content="Discover the range of services offered by Amisana Solutions to empower your business with AI technology.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
-  <meta itemprop="name" content="About Us">
-  <meta itemprop="description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
-  <meta itemprop="wordCount" content="50">
+  <meta itemprop="name" content="Our Services">
+  <meta itemprop="description" content="Discover the range of services offered by Amisana Solutions to empower your business with AI technology.">
+  <meta itemprop="wordCount" content="75">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="About Us">
-  <meta name="twitter:description" content="About Amisana Solutions Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.">
+  <meta name="twitter:title" content="Our Services">
+  <meta name="twitter:description" content="Discover the range of services offered by Amisana Solutions to empower your business with AI technology.">
 
 
 
@@ -62,8 +62,15 @@
     </header>
     <div class="container-fluid td-default td-outer">
       <main role="main" class="td-main">
-        <h1 id="about-amisana-solutions">About Amisana Solutions</h1>
-<p>Amisana Solutions is a boutique consulting firm specializing in bridging the gap between businesses and emerging AI technologies. Founded by Cameron Kiani, MD, our diverse expertise spans medicine, psychology, academia, finance, and information systems, enabling us to provide tailored solutions that drive business growth and operational efficiency.</p>
+        <h1 id="our-services">Our Services</h1>
+<ul>
+<li><strong>AI Implementation:</strong> Guiding businesses in deploying generative AI tools like ChatGPT to enhance operations.</li>
+<li><strong>Digital Marketing Strategies:</strong> Developing and executing strategies to improve online presence and customer engagement.</li>
+<li><strong>Process Automation:</strong> Streamlining workflows and automating repetitive tasks to boost productivity.</li>
+<li><strong>Content Creation:</strong> Assisting in the adoption of AI tools for content generation and management.</li>
+<li><strong>Website Development:</strong> Recommending and implementing suitable platforms for your digital needs.</li>
+<li><strong>Investor Materials:</strong> Enhancing presentations and materials for investor-facing communications.</li>
+</ul>
 
       </main>
       <footer class="td-footer row d-print-none">
